[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
url = "2"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = {version = "0.8", features =  ["v4"]}
truelayer-signing = "0.1.0"
thiserror = "1"
tracing = "0.1"