[package]
name = "truelayer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = { version = "0.11", features = [ "json" ] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
reqwest-tracing = "0.2"
retry-policies = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
task-local-extensions = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = [ "rt", "macros", "sync" ] }
tracing = "0.1"
truelayer-signing = "0.1"
urlencoding = "2.1.0"
uuid = "0.8.2"

[dev-dependencies]
actix-web = "=4.0.0-rc.2"
futures = "0.3"
openssl = "0.10"
wiremock = "0.5"

[features]
acceptance-tests = []